refactor: introduce BaseEntity abstract class for common entity fields